recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:15: error: not found: value agngle
    droite(agngle)
           ^Tree:16: error: not found: value lenght
    recule(lenght)
           ^