recursion.logo.lessons.recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
	if (steps==0){

    
  }else{
    avance(length)
 	  droite(angle)
  	current(steps)
  	tree(steps-1, length*shrink, angle, shrink)   
    recule(length)
  	gauche(angle*2)
  	avance(length)
  	tree(steps-1, length*shrink, angle, shrink )
    recule(length*shrink)
    droite(agngle)
    recule(lenght)
    
  
  }
  
  


}